argocd/cert-manager/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: taskpilot-route
  namespace: taskpilot
spec:
  parentRefs:
    - name: taskpilot-gateway
  hostnames:
    - taskpilot.local
  rules:
    # Backend
    # - matches:
    #   - path:
    #       type: PathPrefix
    #       value: /api/
    #   backendRefs:
    #   - name: backend-service
    #     port: 8080

    # Frontend
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: frontend-service
        port: 8081
